--- a/imageviewer/build.gradle
+++ b/imageviewer/build.gradle
@@ -13,8 +13,7 @@ android {
 }
 
 dependencies {
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'androidx.transition:transition:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
