Updated dependencies; Fixed possible null

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,11 +24,11 @@ android {
 dependencies {
     implementation project(':imageviewer')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0-alpha1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
-    //UI
+    // UI - Image Loader
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
